--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
+    "tronweb": "^2.1.14",
     "vue-recaptcha": "^1.1.1",
     "vue-template-compiler": "^2.5.17",
     "vuebar": "0.0.20"
